--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "This is a personal practice project.",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "build": "echo 'No build step' && exit 0",
+  "dev": "vercel dev"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
