--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "1.0.0",
   "description": "This is a personal practice project.",
   "scripts": {
-  "build": "next build",
-  "dev": "next dev"
-},
+    "build": "echo 'No build step' && exit 0",
+    "dev": "vercel dev"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "pg": "^8.13.1"
   }
 }
