--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { 
-      "src": "api/index.js",
+    {
+      "src": "api/*.js",
       "use": "@vercel/node@3.0.0"
     }
   ],
   "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/api/index.js" 
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js",
+      "headers": {
+        "cache-control": "no-cache"
+      }
     }
   ]
 }
