--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timezone",
+  "name": "timezone-switching",
   "version": "1.0.0",
   "description": "This is a personal practice project.",
   "scripts": {
@@ -16,5 +16,13 @@
   },
   "devDependencies": {
     "vercel": "^32.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/malcolm-yin/Timezone-switching.git"
+  },
+  "bugs": {
+    "url": "https://github.com/malcolm-yin/Timezone-switching/issues"
+  },
+  "homepage": "https://github.com/malcolm-yin/Timezone-switching#readme"
 }
