--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vercel dev",
     "build": "vercel build",
-    "deploy": "vercel deploy --prod"
+    "deploy": "vercel deploy --prod",
+    "vercel-build": "echo 'Building...'"
   },
   "keywords": [],
   "author": "",
@@ -29,4 +30,4 @@
     "url": "https://github.com/malcolm-yin/Timezone-switching/issues"
   },
   "homepage": "https://github.com/malcolm-yin/Timezone-switching#readme"
- }
+}
