--- a/package.json
+++ b/package.json
@@ -3,31 +3,19 @@
   "version": "1.0.0",
   "description": "This is a personal practice project.",
   "scripts": {
-    "start": "vercel dev",
-    "build": "vercel build",
-    "deploy": "vercel deploy --prod",
-    "vercel-build": "echo 'Building...'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "@vercel/node": "^4.0.0",
     "dotenv": "^16.4.7",
     "pg": "^8.13.1"
   },
   "devDependencies": {
     "vercel": "^32.3.0"
-  },
-  "engines": {
-    "node": ">=18.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/malcolm-yin/Timezone-switching.git"
-  },
-  "bugs": {
-    "url": "https://github.com/malcolm-yin/Timezone-switching/issues"
-  },
-  "homepage": "https://github.com/malcolm-yin/Timezone-switching#readme"
+  }
 }
