--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "@vercel/node": "^4.0.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "dotenv": "^16.4.7",
     "pg": "^8.13.1"
   },
