--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "timezone-switching",
   "version": "1.0.0",
-  "description": "This is a personal practice project.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "dotenv": "^16.4.7",
-    "pg": "^8.13.1"
-  },
-  "devDependencies": {
-    "vercel": "^32.3.0"
+    "next": "14.2.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "pg": "^8.11.3"
   }
 }
