--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "timezone-switching",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node api/server.js"
   },
   "dependencies": {
-    "next": "14.2.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "pg": "^8.11.3"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1"
   }
 }
